Fix overflow video on all cams page

--- a/Include/static/main.css
+++ b/Include/static/main.css
@@ -161,7 +161,8 @@ h1.hint-home{
 .video-little{
     width:100%;
     height:100%;
-
+    border-radius:10px;
+    border: none;
 }
 
 .div-video{
@@ -173,9 +174,10 @@ h1.hint-home{
 .div-video-all{
     display: flex;
     height: 400px;
-    /*width: 100%;*/
+    width: 100%;
     justify-content: center;
     align-content: center;
+    overflow: hidden;
 }
 
 iframe{
